--- a/app/src/main/res/layout/item_sticky_layout.xml
+++ b/app/src/main/res/layout/item_sticky_layout.xml
@@ -7,6 +7,8 @@
     app:rippleColor="#007A33"
     app:rippleHover="true"
     app:rippleOverlay="false"
+    app:rippleInAdapter="true"
+    app:rippleDelayClick="true"
     >
 
     <TextView
