--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,28 +36,62 @@
         android:background="@android:color/white"
         android:visibility="visible">
 
-        <RelativeLayout
-            android:id="@+id/maina_top"
+        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_football_title">
+            android:background="@drawable/bg_football_title"
+            android:elevation="10dp"
+            android:minHeight="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="预测"
+        <!--<RelativeLayout-->
+        <!--android:id="@+id/maina_top"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/bg_football_title">-->
 
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@android:color/white" />
-        </RelativeLayout>
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:text="预测"-->
+
+        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+        <!--android:textColor="@android:color/white" />-->
+        <!--</RelativeLayout>-->
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/maina_top"
-            android:scrollbars="vertical"
-            />
+            android:layout_below="@id/tool_bar"
+            android:scrollbars="vertical" />
+
+        <LinearLayout
+            android:id="@+id/progressLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tool_bar"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <com.pnikosis.materialishprogress.ProgressWheel xmlns:wheel="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/progress_wheel"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                wheel:matProg_barColor="@color/color_green"
+                wheel:matProg_progressIndeterminate="true"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/empty_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/quantou"
+                android:text="暂无预测信息"
+                android:visibility="gone"/>
+
+        </LinearLayout>
     </com.sunloto.drawing.lotterydrawresult.widget.MyRelativeLayout>
 </com.sunloto.drawing.lotterydrawresult.widget.DragLayout>
