--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="分享"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_explain" android:title="使用说明"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
