--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/main_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:drawableLeft="@drawable/icon_mine_photo"
+            android:text="未登录"
+            android:gravity="center_vertical"
+            android:textColor="@android:color/white"/>
+
         <se.emilsjolander.stickylistheaders.ExpandableStickyListHeadersListView
             android:id="@+id/expandListView"
             android:layout_width="match_parent"
@@ -62,39 +73,39 @@
         <!--android:textColor="@android:color/white" />-->
         <!--</RelativeLayout>-->
         <!--<ListView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--/>-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tool_bar"
-            android:scrollbars="vertical"
-            />
+            android:scrollbars="vertical" />
 
         <LinearLayout
             android:id="@+id/progressLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/tool_bar"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <com.pnikosis.materialishprogress.ProgressWheel xmlns:wheel="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/progress_wheel"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:visibility="gone"
                 wheel:matProg_barColor="@color/color_green"
-                wheel:matProg_progressIndeterminate="true"
-                android:visibility="gone"/>
+                wheel:matProg_progressIndeterminate="true" />
+
             <TextView
                 android:id="@+id/empty_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableTop="@drawable/quantou"
                 android:text="暂无预测信息"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </LinearLayout>
     </com.sunloto.drawing.lotterydrawresult.widget.MyRelativeLayout>
