比赛详情数据处理，部分数据的展示

--- a/app/src/main/res/layout/activity_forecast_detail.xml
+++ b/app/src/main/res/layout/activity_forecast_detail.xml
@@ -288,10 +288,8 @@
             android:id="@+id/away_stat_comments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:padding="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:background="@drawable/rect_gray_bg"/>
     </LinearLayout>
 </ScrollView>
