--- a/app/src/main/res/layout/activity_forecast_detail.xml
+++ b/app/src/main/res/layout/activity_forecast_detail.xml
@@ -25,7 +25,8 @@
                 <RelativeLayout
                     android:layout_width="280dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal">
+                    android:layout_gravity="center_horizontal"
+                    >
 
                     <TextView
                         android:id="@+id/tv_homeTeamName"
@@ -34,6 +35,8 @@
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
+                        android:layout_toLeftOf="@+id/tv_team_goal"
+                        android:gravity="left"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
 
@@ -44,12 +47,15 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:textColor="@android:color/white"
+                        android:text="2:0"
                         android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/tv_awayTeamName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:layout_toRightOf="@id/tv_team_goal"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
