--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_share" android:title="分享"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <!--<item android:id="@+id/action_share" android:title="分享"-->
+        <!--android:orderInCategory="100" app:showAsAction="never" />-->
     <item android:id="@+id/action_explain" android:title="使用说明"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_website" android:title="官网"
